# pdf-extractext

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env  main.py  pyproject.toml
.opencode/skills/clean-code/: SKILL.md
.opencode/skills/tdd/: SKILL.md
app/: main.py
app/api/: README.md  health.py
app/api/endpoints/: pdfs.py  upload.py
app/core/: config.py
app/models/: README.md  pdf_models.py
app/repository/: README.md  database.py  pdf_repository.py
app/services/: README.md  checksum.py  pdf_service.py
tests/: README.md  conftest.py  test_main.py
tests/api/: test_pdfs.py  test_upload.py
tests/core/: test_config.py
tests/models/: test_pdf_models.py
tests/repository/: test_db_connection.py  test_pdf_repository.py
tests/services/: test_checksum.py  test_pdf_extractor.py
