[project]
name = "pdf-extractext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic>=2.13.0",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
]
