[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-extractext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"fastapi>=0.135.3",
"httpx>=0.28.1",
"motor>=3.7.1",
"pydantic>=2.13.0",
"pymupdf>=1.27.2.2",
"pytest>=9.0.3",
"pytest-asyncio>=0.25.0",
"pytest-dotenv>=0.3.0",
"uvicorn>=0.44.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files = [".env"]
pythonpath = ["."]
